--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "twitterclone": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
