--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "twitterclone",
   "version": "1.0.0",
   "main": "backend/server.js",
-  "scripts": {
-    "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js"
-  },
+"scripts": {
+  "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
+  "start": "cross-env NODE_ENV=production node backend/server.js",
+  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "mongoose": "^8.9.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.9"
   }
 }
